--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -56,6 +56,7 @@
     padding-bottom: 0.6rem;
     list-style: none;
 
+
     li{
         margin: 0 1rem;
         cursor: pointer;
@@ -64,7 +65,7 @@
 
 
         a{
-            
+            text-transform: capitalize;
             color: var(--white-color);
             text-decoration: none;
 
