--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -70,6 +70,14 @@
     align-items: flex-end;
     flex-direction: column;
   
+    .badge-cmp{ 
+      h1{
+      color: var(--secondary-color);
+      font-size: 3rem;
+      font-weight: 300;
+    }
+    
+    }
     .badge-cmp,
     .tag-cmp {
       padding: 1rem 2rem;
@@ -78,21 +86,21 @@
       flex-direction: row;
       width: auto;
       
-  
-      background: var(--gray-color);
+      background: transparent;
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
     }
 
     .tag-cmp {
       flex-direction: column;
-      margin-top: 3rem;
+      margin-top: 0rem;
   
       p {
         color: #ffffff;
         width: 100%;
         text-transform: uppercase;
         text-align: right;
+        
       }
     }
   
@@ -124,7 +132,7 @@
       height: 100px;
       border-radius: 50%;
   
-      background: var(--gray-color);
+      // background: var(--gray-color);
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
   
@@ -211,4 +219,3 @@
       margin: 2rem 0;
     }
   }
-
