--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@
   .copyright {
     width: 100%;
     padding: 2rem 0 0;
-  
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -71,6 +71,27 @@
   
     @media screen and (max-width: 450px) {
       font-size: 2rem;
+    }
+  }
+
+  .head-paragraph {
+    font-size: 1rem;
+    margin-top: 3rem;
+    font-weight: 300;
+    text-align: center;
+    color: var(--white-color);
+
+  
+    span {
+      color: var(--secondary-color);
+    }
+  
+    @media screen and (min-width: 2000px) {
+      font-size: 2rem;
+    }
+  
+    @media screen and (max-width: 450px) {
+      font-size: 1rem;
     }
   }
   
@@ -158,7 +179,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  
+    
     padding: 1rem;
   
     .app__navigation-dot {
