--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -46,6 +46,21 @@
             height: 30;
         }
     }
+
+    button{
+        background: transparent;
+        border: none;
+        color: var(--secondary-color);
+        text-decoration: none;
+        font-size: 1rem;
+        // text-transform: uppercase;
+        transition: all 0.3s ease-in-out;
+        font-weight: 300;
+
+        &:hover{
+            color: var(--secondary-color);
+        }
+    }
 }
 
 .app__navbar-links{
