--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,10 @@
     @media screen and (max-width: 450px) {
       font-size: 1rem;
     }
+
+    .p-text{
+      font-size: 0.6rem;
+    }
   }
   
   .p-text {
